force-app/main/default/objects/Proposta__c/Proposta__c.object-meta.xml
<CustomObject>
    <label>Proposta</label>
    <nameField>
        <label>Proposta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Propostas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>