force-app/main/default/objects/Proposta__c/fields/Aprovador__c.field-meta.xml
<CustomField>
    <fullName>Aprovador__c</fullName>
    <label>Aprovador</label>
    <length>80</length>
    <type>Text</type>
</CustomField>