force-app/main/default/objects/Proposta__c/fields/Data_de_Aprovacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Aprovacao__c</fullName>
    <label>Data de Aprovação</label>
    <type>Date</type>
</CustomField>