force-app/main/default/objects/Proposta__c/fields/Data_Envio__c.field-meta.xml
<CustomField>
    <fullName>Data_Envio__c</fullName>
    <description>Data de envio ao cliente</description>
    <label>Data de Envio</label>
    <type>Date</type>
</CustomField>