force-app/main/default/objects/Proposta__c/fields/Numero_Colaboradores__c.field-meta.xml
<CustomField>
    <fullName>Numero_Colaboradores__c</fullName>
    <description>Qtd. estimada de colaboradores</description>
    <label>Número de Colaboradores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>