force-app/main/default/objects/Proposta__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oportunidade vinculada</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Propostas</relationshipLabel>
    <relationshipName>Proposta_Opp_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>