force-app/main/default/objects/Proposta__c/fields/Plano_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Plano_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plano selecionado</description>
    <label>Plano Comercial</label>
    <referenceTo>Plano_Comercial__c</referenceTo>
    <relationshipLabel>Propostas</relationshipLabel>
    <relationshipName>Proposta_Plano_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>