force-app/main/default/objects/Proposta__c/fields/Valor_Total_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Calculado__c</fullName>
    <description>Valor total calculado via Apex (PropostaService.calcularValorTotal), a partir de Numero_Colaboradores__c e do Valor_Por_Vida__c do Plano Comercial vinculado. Criado no Módulo 6 porque Valor_Total__c é campo fórmula e não pode ser gravado via DML.</description>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>