force-app/main/default/objects/Proposta__c/recordTypes/PME.recordType-meta.xml
<RecordType>
    <fullName>PME</fullName>
    <active>true</active>
    <description>Propostas para pequenas e médias empresas</description>
    <label>PME</label>
</RecordType>