force-app/main/default/objects/Proposta__c/validationRules/Data_Envio_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_Envio_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Data_Envio__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Data_Envio__c</errorDisplayField>
    <errorMessage>A data de envio não pode ser anterior à data de hoje.</errorMessage>
</ValidationRule>